--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -47,10 +47,10 @@
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Spins-${global_variables.release['curr_alt_id']}-1.3-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Spins-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-1.3-aarch64-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
