[alt] Fix up checksum links, and point them to new getfedora checksum dir format
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -38,7 +38,8 @@
             </div>
             <h4 class="uppercase">${_('Workstation')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/iso/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Workstation-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
         </div>
         <div class="col-sm-3 col-xs-12 highlight productitem">
@@ -47,16 +48,17 @@
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Spins-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Spins-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/iso/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/iso/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/iso/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
         </div>
         <div class="col-sm-3 col-xs-12 highlight productitem">
@@ -65,19 +67,16 @@
             </div>
             <h4 class="uppercase">${_('Cloud')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x images')}</a>
-            </div>
-            <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For Cloud Base images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Cloud-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For x86_64 images')}</a>
             </div>
         </div>
         <div class="col-sm-3 col-xs-12 highlight productitem cloud">
@@ -86,13 +85,13 @@
             </div>
             <h4 class="uppercase">${_('Container')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
         </div>
     </div>
@@ -106,9 +105,9 @@
             <pre class="command">$ gpg --verify-files *-CHECKSUM</pre>
             <p>${Markup(_('The CHECKSUM file should have a good signature from one of the following keys:'))}</p>
             <ul>
+                <li><code>45719A39</code> - ${_('Fedora 34')}</li>
+                <li><code>9570FF31</code> - ${_('Fedora 33')}</li>
                 <li><code>12C944D0</code> - ${_('Fedora 32')}</li>
-                <li><code>3C3359C4</code> - ${_('Fedora 31')}</li>
-                <li><code>CFC659B9</code> - ${_('Fedora 30')}</li>
                 <li><code>DBBDCF7C</code> - ${_('IOT 2019')}</li>
             </ul>
             <p>${Markup(_('Finally, now that the CHECKSUM file has been verified, check that the image\'s checksum matches:'))}</p>
