[arm] checksum fixes
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -35,25 +35,26 @@
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Server')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/iso/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server iso')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server images')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Minimal!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Minimal')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Desktop')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Workstation!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Workstation images')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Spins!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Spins images')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Labs')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="https://getfedora.org/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Labs!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${global_variables.path['checksums']}/${global_variables.release['curr_alt_id']}/images/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Labs images')}</a>
           </div>
         </div>
     </div>
@@ -67,9 +68,9 @@
             <pre class="command">$ gpg --verify-files *-CHECKSUM</pre>
             <p>${Markup(_('The CHECKSUM file should have a good signature from one of the following keys:'))}</p>
             <ul>
+                <li><code>45719A39</code> - ${_('Fedora 34')}</li>
+                <li><code>9570FF31</code> - ${_('Fedora 33')}</li>
                 <li><code>12C944D0</code> - ${_('Fedora 32')}</li>
-                <li><code>3C3359C4</code> - ${_('Fedora 31')}</li>
-                <li><code>CFC659B9</code> - ${_('Fedora 30')}</li>
                 <li><code>DBBDCF7C</code> - ${_('IOT 2019')}</li>
             </ul>
             <p>${Markup(_('Finally, now that the CHECKSUM file has been verified, check that the image\'s checksum matches:'))}</p>
