--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -54,7 +54,7 @@
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
           <ul>
               <li>
-                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-armhfp-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('%sGB ARM image')) % global_variables.iso_size['ARM_Py_Class']}</a></p>
+                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/armhfp/images/Fedora-Python-Classroom-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.armhfp.raw.xz">${Markup(_('%sGB ARM image')) % global_variables.iso_size['ARM_Py_Class']}</a></p>
               </li>
           </ul>
           <h4>${_('Older Releases')}</h4>
