[spins] Move Cinnamon for f34 release
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/spins.fedoraproject.org/data/content/cinnamon/download/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/download/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s Cinnamon Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
-            <p class="gr"><a class="btn btn-success cinnamon-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-Cinnamon-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
+            <p class="gr"><a class="btn btn-success cinnamon-download-splash" href="https://dl.fedoraproject.org/pub/alt/unofficial/releases/34/Fedora-Cinnamon-Live-x86_64-34-1.2.iso" role="button">${_('Download')}</a></p>
         </div>
       </div>
     </div>
