--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -76,6 +76,34 @@
           </div>
           <div class="white">
             <div class="col-md-1">
+            <img src="/static/images/aarch64.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Fedora KDE Plasma')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sGB Live ISO')) % global_variables.iso_size['aarch64_KDE_live']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Spins/aarch64/iso/Fedora-KDE-Live-aarch64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            </div>
+          </div>
+            <div class="white">
+            <div class="col-md-1">
+            <img src="/static/images/aarch64.png" />
+            </div>
+            <div class="col-md-4">
+            <h3>${_('Fedora KDE Plasma')}</h3>
+            </div>
+            <div class="col-md-3">
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['aarch64_KDE_raw']}</p>
+            </div>
+            <div class="col-md-4">
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Spins/aarch64/images/Fedora-KDE-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            </div>
+          </div>
+          <div class="white">
+            <div class="col-md-1">
             <img src="/static/images/min.png" />
             </div>
             <div class="col-md-4">
