Add aarch64 link to KDE Plasma download page

--- a/spins.fedoraproject.org/data/content/kde/download/index.html
+++ b/spins.fedoraproject.org/data/content/kde/download/index.html
@@ -34,7 +34,8 @@
           <h3>${_('Other Downloads')}</h3>
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
           <ul>
-            <li><a href="https://arm.fedoraproject.org/">arm.fedoraproject.org</a></li>
+            <li><a href="https://alt.fedoraproject.org/alt">ARMv8 (aarch64)</a></li>
+            <li><a href="https://arm.fedoraproject.org/">ARMv7 (armhfp)</a></li>
           </ul>
           <h4>${_('Older Releases')}</h4>
           <ul>
