Use the KDE logo for KDE Plasma downloads

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="white">
             <div class="col-md-1">
-            <img src="/static/images/aarch64.png" />
+            <img src="/static/images/kde.png" />
             </div>
             <div class="col-md-4">
             <h3>${_('Fedora KDE Plasma')}</h3>
@@ -90,7 +90,7 @@
           </div>
             <div class="white">
             <div class="col-md-1">
-            <img src="/static/images/aarch64.png" />
+            <img src="/static/images/kde.png" />
             </div>
             <div class="col-md-4">
             <h3>${_('Fedora KDE Plasma')}</h3>
