--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -484,7 +484,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3 product-feature">
-            <p>${_('These images are for ARM-based devices where a bundle of purpose-drive software is needed.')}</p>
+            <p>${_('These images are for ARM-based devices where a bundle of purpose-driven software is needed.')}</p>
           </div>
           <div class="col-lg-9">
             <div class="white">
@@ -516,7 +516,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 product-feature">
-            <p>${_('These images are for ARM-based devices where a bundle of purpose-drive software is needed.')}</p>
+            <p>${_('These images are for ARM-based devices where a bundle of purpose-driven software is needed.')}</p>
           </div>
         </div>
         <div class="row">
@@ -543,7 +543,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 product-feature">
-            <p>${_('These images are for ARM-based devices where a bundle of purpose-drive software is needed.')}</p>
+            <p>${_('These images are for ARM-based devices where a bundle of purpose-driven software is needed.')}</p>
           </div>
         </div>
         <div class="row">
@@ -569,7 +569,7 @@
 	  <div class="col-xs-12 caption">
 	    <h2 class="text-center">${Markup(_('What is ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology?'))}</h2>
 	    <p class="thin text-justify">${_('ARM microprocessors are the most widely-produced processor family in the world; they have historically been used in cell phones and embedded applications, and are increasingly used in tablet devices and low-power-consumption servers.')}</p>
-	    <p class="thin text-justify">${_('The Fedora ARM project is an initiative to bring Fedora to this processor family. The images provided here are versions of Fedora tailored for running in on ARM-based systems.')}</p>
+	    <p class="thin text-justify">${_('The Fedora ARM project is an initiative to bring Fedora to this processor family. The images provided here are versions of Fedora tailored for running on ARM-based systems.')}</p>
           </div>
         </div>
       </div>
