Add the 2021 prospectus

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -326,7 +326,7 @@
           <div class="large-icon"><i class="fa fa-credit-card"></i></div>
           <h2>Sponsors</h2><br/>
           <p>
-            Sponsorship opportunities are still open. For information, contact <a href="mailto:flockinfo@fedoraproject.org">flockinfo@fedoraproject.org</a>.
+	  Sponsorship opportunities are still open. For information, see the <a href="../../static/images/sponsor-prospectus-2021.pdf">prospectus</a> or contact <a href="mailto:flockinfo@fedoraproject.org">flockinfo@fedoraproject.org</a>.
           </p>
           <br/>
           <h3>Platinum Level</h3>
